fix video gap beetween txt blocks

--- a/css/video.css
+++ b/css/video.css
@@ -842,6 +842,7 @@ footer {
   position: absolute;
   bottom: -5.5vh;
   left: 50%;
+  background-color: #353638;
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%); }
