--- a/scss/components/_videos-list.scss
+++ b/scss/components/_videos-list.scss
@@ -38,6 +38,7 @@
 	position: absolute;
 	bottom: -5.5vh;
 	left: 50%;
+	background-color: $clr-header;
 	transform: translateX(-50%);
 	&:before {
 		content: "";
